--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
     android:padding="24dp"
     tools:context=".MainActivity">
 
@@ -21,7 +20,7 @@
         android:id="@+id/question"
         android:textStyle="bold"
         android:text="This will be the question"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="24dp"
         android:textAlignment="center"
         android:layout_margin="20dp"
@@ -79,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/submit_btn"
-        android:text="Submit"
+        android:text="Next"
         android:layout_below="@id/choices_layout"
         android:layout_marginTop="40dp"/>
 
